<resources>
    <string name="app_name">Online shop</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="enter_username">Username</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="enter_password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="home">HOME</string>
    <string name="menu">MENU</string>
    <string name="account">ACCOUNT</string>
    <string name="bag">BAG</string>
    <string name="purchase_history">PURCHASE HISTORY</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="passwordbt">PASSWORD</string>
    <string name="end_session">END SESSION</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="save">SAVE</string>
    <string name="list_is_empty">List is empty</string>
    <string name="back">BACK</string>
    <string name="add">ADD</string>
    <string name="price">price</string>
    <string name="date">date</string>
    <string name="status">status</string>
    <string name="obrisi_sve">obrisi sve</string>
</resources>